# ComplexityProject2026

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/: DPLL.hpp  Levin.hpp  Types.hpp  Useful.hpp
src/: DPLL.cpp  Levin.cpp  Useful.cpp  main.cpp
tests/: tests_dpll.cpp  tests_levin.cpp  tests_stress.cpp  tests_types.cpp  tests_useful.cpp
